--- a/content/thoughts/2023-03 to 2023-10 diary.md
+++ b/content/thoughts/2023-03 to 2023-10 diary.md
@@ -38,7 +38,7 @@ tags:
 [[2023-05-03]]: [[poems/on an afternoon walk i saw fireflies]]
 [[2023-05-04]]: More thoughts on Ocean Vuong; Being divided no more; Emulating poet prose writers vs. plain language writers
 [[2023-05-05]]: More thoughts on Ocean Vuong, uncluding, somehow, he reminds me of [[thoughts/rem tanauan]]; [[thoughts/writing prose as a poet]]
-[[2023-05-06]]: [[vignettes/the very first memory]]
+[[2023-05-06]]: [[the very first memory]]
 [[2023-05-08]]: Hotter at LB; Controlling Messenger
 [[2023-05-09]]: How to Feel Miserable as an Artist, which I translated to [[translations/paano maging miserableng artist]]
 [[2023-05-10]]: My uncensored thoughts on my parents' reaction after telling them about ANWW20
@@ -100,15 +100,15 @@ tags:
 [[2023-07-22]]: Current challenges of my life
 [[2023-07-23]]: Analysis of If You Can't See My Mirrors I Can't See You in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
 [[2023-07-24]]: How reading [[thoughts/melt the snowflake at once by david rothenberg|Melt the Snowflake at Once by David Rothenberg]] helped me remember that lyrical philosophy is what I want to create; Revisions in Ili's website copy; Analysis of Poetry is Read on Faces in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
-[[2023-07-25]]: [[poems/in july|In July]]; Analysis of Ferrante & Teicher in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]; some ideas on improving [[thoughts/my worldview|my worldview]]; Given the kind of writing I want to produce, what's the best way to produce it?
+[[2023-07-25]]: [[in july|In July]]; Analysis of Ferrante & Teicher in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]; some ideas on improving [[thoughts/my worldview|my worldview]]; Given the kind of writing I want to produce, what's the best way to produce it?
 [[2023-07-26]]: A celebration of this moment; Analysis of Making Scenes in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]; a bit of an idea for [[thoughts/my poetics|my poetics]]
 [[2023-07-27]]: Some insights on [[thoughts/understanding|understanding]]; Analysis of Short Walks in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
 [[2023-07-28]]: Analysis of Static in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
 [[2023-07-29]]: [[mindfulness over analysis]]; Analysis of Cafe in [[literature/the collapse of what separates us by vincenz serrano|The Collapse of What Separates Us by Vincenz Serrano]]
-[[2023-07-30]]: Additional thoughts on [[thoughts/presence is the foundation|presence is the foundation]]; [[poems/those stairs at bakakeng|Those Stairs at Bakakeng]]
+[[2023-07-30]]: Additional thoughts on [[thoughts/presence is the foundation|presence is the foundation]]; [[those stairs at bakakeng|Those Stairs at Bakakeng]]
 [[2023-07-31]]: I could do a better job in [[thoughts/ethics|ethics]]; putting [[thoughts/philosophy|philosophy]], [[thoughts/contemplation|contemplation]], and [[thoughts/ethics|ethics]] under [[thoughts/understanding|understanding]].
 
-[[2023-08-01]]: [[vignettes/the possibility of love|The Possibility of Love]]
+[[2023-08-01]]: [[the possibility of love|The Possibility of Love]]
 [[2023-08-02]]: More thoughts on [[projects someday/a book about los baños|a book about los baños]], including a social media post draft to announce my intention to write a book
 [[2023-08-03]]: To dos; Insight while walking: I need to work according to my timeline regarding the Claire issue
 [[2023-08-04]]: Initial impressions of [[thoughts/jack gilbert|Jack Gilbert]]
@@ -127,7 +127,7 @@ tags:
 [[2023-08-19]]: Ideas for the second CCWW essay
 [[2023-08-20]]: Decision-making on the second CCWW essay
 [[2023-08-23]]: [[thoughts/i desire intelligibility|I desire intelligibility]]
-[[2023-08-24]]: [[poems/this morning|This Morning]]
+[[2023-08-24]]: [[this morning|This Morning]]
 [[2023-08-29]]: Reading Thomas Moore; [[thoughts/personal religion]]; Philosophy and contemplation first before writing
 [[2023-08-30]]: Reclaiming my mornings for my contemplative and religious calling; Contemplation first before writing; Personal religion for boundary-setting; Protecting my calling
 [[2023-08-31]]: Conceptualizing the [[thoughts/buhian entry|Buhian entry]].
