--- a/content/uman 2023-07.md
+++ b/content/uman 2023-07.md
@@ -25,7 +25,7 @@ Some of my favorite writings this month include the walk poem drafts:
 
 I wrote these poems initially as fragments of observations during two afternoon walks. My rule was to write a brief note on whatever piqued my interest or whatever thought calls on the walk and to separate lines per street where they occurred. Thus the number of stanzas equal the number of streets walked.
 
-One Sunday morning, another poem came to me: [[poems/those stairs at bakakeng|Those Stairs at Bakakeng]].
+One Sunday morning, another poem came to me: [[those stairs at bakakeng|Those Stairs at Bakakeng]].
 
 Aside from these, I enjoyed writing these notes:
 - [[thoughts/suicide|suicide]]
