--- a/content/uman 2023-08.md
+++ b/content/uman 2023-08.md
@@ -40,9 +40,9 @@ I enjoyed writing two notes: one about public life and another about mindfulness
 
 I managed to publish three newsletter issues:
 
-- [[vignettes/the very first memory|The Very First Memory]]
-- [[vignettes/lolo aldo|Lolo Aldo]]
-- [[poems/in july|In July]]
+- [[the very first memory|The Very First Memory]]
+- [[lolo aldo|Lolo Aldo]]
+- [[in july|In July]]
 
 # Lyric Essays
 
