--- a/content/uman 2023-09.md
+++ b/content/uman 2023-09.md
@@ -48,9 +48,9 @@ The best things I read this month were:
 
 I published three newsletters in September:
 
-- [[poems/this morning|This Morning]]
-- [[vignettes/the possibility of love|The Possibility of Love]]
-- [[vignettes/sabel|Sabel]]
+- [[this morning|This Morning]]
+- [[the possibility of love|The Possibility of Love]]
+- [[sabel|Sabel]]
 
 # Writing Events Applications
 
