--- a/content/uman 2023-10.md
+++ b/content/uman 2023-10.md
@@ -26,8 +26,8 @@ If you're curious to see what an epistolary essay on walking looks like, here's 
 # TLW
 
 I published two issues of The Long Walk last October 2023. In case you missed them, here they are:
-- [[poems/a midsummer rain in lb|A Midsummer Rain in LB]] (poem)
-- [[thoughts/approach life with humor|Approach life with humor]] (note)
+- [[a midsummer rain in lb|A Midsummer Rain in LB]] (poem)
+- [[approach life with humor|Approach life with humor]] (note)
 
 # Photography via Darktable
 
