--- a/content/uman 2024-01.md
+++ b/content/uman 2024-01.md
@@ -25,7 +25,7 @@ Welcome to 2024's first issue of Uman, a word that means "change" and which I've
 
 # Looking Back
 
-On the first week of January 2024, I took some time to write [[uman 2023-12|the final issue of Uman for 2023]]. I also paused to look back at the year that just passed. This annual review has been a tradition I've kept for more than a decade, and it has helped me articulate the most important things to prioritize in the year ahead. After publishing my [[2023 annual review 1|2023 annual review 1]], I knew authenticity and focus were my main themes for 2024.
+On the first week of January 2024, I took some time to write [[uman 2023-12|the final issue of Uman for 2023]]. I also paused to look back at the year that just passed. This annual review has been a tradition I've kept for more than a decade, and it has helped me articulate the most important things to prioritize in the year ahead. After publishing my [[2023 annual review|2023 annual review]], I knew authenticity and focus were my main themes for 2024.
 
 # Walking Baguio
 
