--- a/content/2023-05-16 seeds.md
+++ b/content/2023-05-16 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[poems/a midsummer rain in lb]]
+- [[a midsummer rain in lb]]
 
 In the afternoon, as I walk toward Forestry or Pili Drive, I share side walks with students walking toward the gate. Most of them are loud and talk about the same things. They are as loud as the line of cars passing beside them. Everyone, students and car alike, end their days through noise, going home to retire before returning tomorrow for another noisy day. This is what I walk through before entering the silence at the foot of Makiling.
 
