--- a/content/2020-11 to 2021-03 diary.md
+++ b/content/2020-11 to 2021-03 diary.md
@@ -8,3 +8,5 @@ tags:
 ---
 
 - [[2020-11-16]]: Fourth journal in two years; journaling has made me a writer; different ways of journaling
+- [[2020-11-17]]: [[eliminativism]]
+- [[2020-11-18]]: Relationship lessons: [[navigating changes in a relationship]]; Budjette Tan sketch; Fruit Salad updates
