--- a/content/uman 2023-11.md
+++ b/content/uman 2023-11.md
@@ -11,7 +11,7 @@ tags:
 ---
 ![An island](island.jpg)
 
-A trip to Baguio last October left me in a tunnel filled with doubts about where I was heading. I wanted November to show me the way out. I knew I needed help, so I typed the URL of [[thoughts/andrew j. brown|Andrew James Brown's]] website, navigated to the contact form, and pasted the message I drafted on my note-taking app.
+A trip to Baguio last October left me in a tunnel filled with doubts about where I was heading. I wanted November to show me the way out. I knew I needed help, so I typed the URL of [[andrew j brown|Andrew James Brown's]] website, navigated to the contact form, and pasted the message I drafted on my note-taking app.
 
 Andrew, the first religious minister I ever paid attention to since 2012, is an atheist, and yet he leads a church in the United Kingdom. I was wandering around the spiritual wilderness for more than a decade, but I've never heard about an atheist pastor. I would later learn that atheism is prevalent even among many conservative churches, but it is especially welcomed and nurtured in the liberal religious movement called [[Unitarianism]]. If there is any way for me to reconcile my past as a devout JW with my heavily secular and agnostic present, a necessity I discovered I had to do after [[traversing liminality through walking|a relatively long walk last year]], that way would be found only within liberal religion.
 
