--- a/content/uman 2024-02.md
+++ b/content/uman 2024-02.md
@@ -38,7 +38,7 @@ Ever since contemplating incorporation, I started entertaining the idea that per
 
 This "positionlessness" is, of course, still a position. A danger inherent in it is that it might encourage someone not to take a stand when necessary. This doesn't have to be the case. Positionlessness doesn't have to mean not taking any position at all. Letting go of a single position means I open myself to more positions. Therefore, positionlessness is positionfulness in disguise. Being a man (or a woman) without a position means rejecting the imposition that one should never change. This is, of course, a position—one that a man without a position constantly takes.
 
-To illustrate positionlessnes, think photography. I love this illustration offered by [[Andrew J. Brown]]:
+To illustrate positionlessnes, think photography. I love this illustration offered by [[andrew j brown]]:
 
 >I always try to pick up my camera and go out into the world without a ready-made, fully worked-out blueprint, theory or plan about how, when or where to take a photograph. In this sense, what the surfboard is to the surfer, the camera is to me the photographer. In doing this I’m attempting to keep myself open to whatever whooshes-up or shines before me, whether that is in the form of an obvious “subject”, “view”, or a simple passing play of sunlight and shadow. When something does whoosh-up or shines before me, I stop and take a photograph. To do this I must, of course, temporarily “take a position.” Not only by standing still in this or that place but also by taking a position with regard to the camera settings I am going to use, the f-stop, the shutter speed, film speed and whether to shoot in black and white or colour. Now, were I never to take this or that position with regard to all these things, I would never be able to take any photo (good or bad). However, it is vitally important that, having taken a photograph, I never become wholly wedded to this or that particular position, subject, view, passing play of sunlight and shadow or this or that set of settings—instead, I must move on, intra-actively, on the crest of the unfolding world, to attain another perspective and so allow something else to whoosh-up or shine before me which calls me to shoot, click!
 
