--- a/content/uman 2022-07.md
+++ b/content/uman 2022-07.md
@@ -93,7 +93,7 @@ In my journal, I wrote about what is most important to me during walks ([[Connec
 
 ## Reviewing and resetting goals
 
-Lastly, I read James Clear's web page on [goal-setting](https://jamesclear.com/goal-setting) and took some notes on Zotero. Then I read his article on [Warren Buffet's list](https://jamesclear.com/buffett-focus). I pondered about the process and thought about how I could integrate it with my annual and monthly reviews. I applied the process, and it made it clear that my most significant projects in the coming months pertain to clarifying [[thoughts/my life plan|my life work]].
+Lastly, I read James Clear's web page on [goal-setting](https://jamesclear.com/goal-setting) and took some notes on Zotero. Then I read his article on [Warren Buffet's list](https://jamesclear.com/buffett-focus). I pondered about the process and thought about how I could integrate it with my annual and monthly reviews. I applied the process, and it made it clear that my most significant projects in the coming months pertain to clarifying [[my life plan|my life work]].
 
 I created a few new notes to facilitate my thinking on this goal-setting process.
 - [[thoughts/warren buffet list]]
