--- a/content/uman 2024-04.md
+++ b/content/uman 2024-04.md
@@ -20,7 +20,7 @@ You are receiving this because you subscribed to it days or months ago as a bund
 
 Inspired by some newfound insights after attempting to articulate my personal writing poetics through an essay set to be published by [an academic/literary journal](https://ajol.ateneo.edu/katipunan), I spent most of April doing some more writing and, as a consequence, thinking about its place in the life I'm trying to build these days.
 
-The writing I did was an attempt to collate more than three years' worth of text I've written about [[walking los baños|walking Los Baños]] into two essays (perhaps, finally, the beginning of a book?). To begin the collation, I had to extract pieces of text ([[tags/vignettes|vignettes]]) from longer essays and newsletters I've written in the past, including the six essays I wrote for [[tags/rxg|Roots x Gravel]], the week-long walk of Los Baños I did last December 2023.
+The writing I did was an attempt to collate more than three years' worth of text I've written about [[walking los banos|walking Los Baños]] into two essays (perhaps, finally, the beginning of a book?). To begin the collation, I had to extract pieces of text ([[tags/vignettes|vignettes]]) from longer essays and newsletters I've written in the past, including the six essays I wrote for [[tags/rxg|Roots x Gravel]], the week-long walk of Los Baños I did last December 2023.
 
 But I'm most concerned about the writing meditation prompted by this month-long project. As readers of this newsletter would know, I've been trying to reincorporate certain aspects of my religious past as an ex-Jehovah's Witness minister into my conversion toward a [[jiyu shukyo|free, creative spirituality]]—a project I've been avoiding for years.
 
