--- a/content/thoughts/2023-03 to 2023-10 diary.md
+++ b/content/thoughts/2023-03 to 2023-10 diary.md
@@ -62,7 +62,7 @@ tags:
 [[2023-05-28]]: The fastest way to what I want to do
 [[2023-05-29]]: [[Apostasy by Daniel Kokotajlo]]; [[Rewalking Baguio]]
 [[2023-05-30]]: Draft of first issue for newsletter A Book About LB
-[[2023-05-31]]: [[thoughts/journaling is sacred]]
+[[2023-05-31]]: [[journaling is sacred]]
 
 [[2023-06-01]]: Summary of May 2023
 [[2023-06-02]]: Choosing [[A life in letters]] vs other options like psychology; Thoughts on Maui as a friend
