--- a/content/uman 2023-11.md
+++ b/content/uman 2023-11.md
@@ -25,7 +25,7 @@ Practicing seiza for a month has taught me a lot about being mindful of my postu
 
 Andrew also advised looking into the life of [[shinichiro imaoka|Shinichiro Imaoka (1881–1988)]], dubbed the Emerson of Japan and the proponent of a uniquely Eastern liberal religious concept called "[[jiyu shukyo|jiyu shukyo]]." Imaoka was raised a Pureland Buddhist but later converted to Anglicanism, Congregationalism, and Unitarianism before embracing his spiritual philosophy of free religion. Imaoka's life and conversions were detailed in a biography by George Williams called [[literature/cosmic sage williams|Cosmic Sage]].
 
-Imaoka didn't leave us a clear definition of free religion, so it can be challenging to explain the concept. However, reading and reflecting on [[imaoka creed of life|Imaoka's Creed of Life]] helps one understand free religion better. It is what I did per Andrew's advice.
+Imaoka didn't leave us a clear definition of free religion, so it can be challenging to explain the concept. However, reading and reflecting on [[imaoka principles of living|Imaoka's Creed of Life]] helps one understand free religion better. It is what I did per Andrew's advice.
 
 However, the absence of a clear definition of free religion should be seen as an asset of the idea: anyone learning about it could create their own interpretation. I did this through my essay [[a goodness lurking|"A Goodness Lurking: The Quest for a Free, Subsistent Spirituality]]." 
 
