--- a/content/uman 2024-02.md
+++ b/content/uman 2024-02.md
@@ -86,7 +86,7 @@ In an essay in 2021 entitled *[[that which walks smith|That Which Walks]]*, Smit
 
 Moving forward, Smith believes that the derive could return to its original collectivist aspirations by embracing the concrete materiality of the nonhuman. In a 2019 conference of walking artists in Plymouth, he detected and reported this tendency.
 
-This history is fascinating because somehow, the history of the derive, as Smith describes it, mirrors the kind of jiyū shūkyō expressed by Shinichiro Imaoka in his [[imaoka creed of life|Creed of Life]]. In eight affirmations, Imaoka moved from recognizing a person's unique individuality to affirming that such individuality could only be nurtured in the context of a community and later moved to include the nonhuman world in that community. Here, I think, lies the key to seeing how I could use walking as a form of jiyū shūkyō ministry.
+This history is fascinating because somehow, the history of the derive, as Smith describes it, mirrors the kind of jiyū shūkyō expressed by Shinichiro Imaoka in his [[imaoka principles of living|Creed of Life]]. In eight affirmations, Imaoka moved from recognizing a person's unique individuality to affirming that such individuality could only be nurtured in the context of a community and later moved to include the nonhuman world in that community. Here, I think, lies the key to seeing how I could use walking as a form of jiyū shūkyō ministry.
 
 I plan to go deeper into Phil Smith's work, the contemporary derive, and other forms of radical walking in the Philippines. I'll see where this research brings me. My primary intention is to produce walking-inspired written artifacts and design walking experiences that could help people explore jiyū shūkyō.
 
