--- a/content/uman 2023-11.md
+++ b/content/uman 2023-11.md
@@ -41,7 +41,7 @@ One of the most obvious things I missed in my past life as a JW was the strong s
 
 After reading about Thoreau's quest and Imaoka's life, I knew I needed to reframe my life into a similar structure. I needed a ministry, a way to serve others. But what? Thinking about this made me realize that this was the closest I've ever come to feeling like a religious person again after giving that all up in 2012.
 
-Where do I look for my ministry? First, I looked at what I'm currently doing and see how I can convert it into [[thoughts/my ministry|a personal ministry]]. I even entertained the idea of joining a new religion and considering a pastoral path.
+Where do I look for my ministry? First, I looked at what I'm currently doing and see how I can convert it into [[my ministry|a personal ministry]]. I even entertained the idea of joining a new religion and considering a pastoral path.
 
 But then, I realized that after leaving a ministerial and pastoral life, what preoccupied most of my 20s was an exploration of writing. It was mostly an untrained writing life. I began by tracking my mood every day in a large notebook during the weeks of my depressive episode. Then I discovered blogging and blogged my life into the world. Journaling came only after I realized writing on paper was its own experience. I was primarily self-taught, and most of my writing was highly personal. And yet, it was a writing life nonetheless. My relationship with writing is so personal and too spiritual that I only came out this year and tried my luck with my very first workshop at age 31.
 
