--- a/content/thoughts/2023-11-17 seeds.md
+++ b/content/thoughts/2023-11-17 seeds.md
@@ -5,7 +5,7 @@ tags:
   - seeds
 ---
 - [[poems/isa akong ilog|isa akong ilog]]
-- [[thoughts/unitarianism|unitarianism]]
+- [[unitarianism|unitarianism]]
 
 Ilog ako
 ang mga hinagap at damdamin koy dumadaloy sa kailaliman at paminsan-minsay tumitilamsik sa baybayin.
