--- a/content/uman 2022-08.md
+++ b/content/uman 2022-08.md
@@ -74,7 +74,7 @@ He got me at "philosophically/theologically inclined writer" (That's me! Well, a
 
 That's exactly how I want my thinking and writing to look like or, at least, try to be. His article/sermon "[The Freedom To Be Tomorrow What We Are Not Today](https://andrewjbrown.blogspot.com/2022/05/the-freedom-to-be-tomorrow-what-we-are.html)" elaborated this quote.
 
-After reading the word [[thoughts/unitarianism]] from Andrew's bio, I immediately felt it was familiar. Ah, yes! The movie *Come Sunday*, which was about the excommunication of Carlton Pearson, a once pastor of the Higher Dimensions Family Church, because of his refusal to teach the existence of hell. After leaving his previous church, Pearson became affiliated with a unitarian church.
+After reading the word [[unitarianism]] from Andrew's bio, I immediately felt it was familiar. Ah, yes! The movie *Come Sunday*, which was about the excommunication of Carlton Pearson, a once pastor of the Higher Dimensions Family Church, because of his refusal to teach the existence of hell. After leaving his previous church, Pearson became affiliated with a unitarian church.
 
 Unitarianism, I would later learn, is one of the most liberal movements in religion, one that allowed its ministers to teach free thinking theologies, even skepticism about the existence of God. As an ex-young pastor of a fundamentalist evangelical religion, who left after realizing how stringent the rules in the church were, the spirit of unitarianism speaks a lot to me. Although I have no plans of joining any organize religion anytime soon, Andrew's work reminded me of the many possibilities in a life devoted to philosophy and contemplation.
 
