--- a/content/uman 2023-09.md
+++ b/content/uman 2023-09.md
@@ -16,7 +16,7 @@ tags:
 
 The timer I use during meditation checks up on my mood before every practice. It does so by offering several choices. I never clicked the word "content." I reason that I'm in the middle of fixing a lot of things in my life, so how can I be contented?
 
-But then I encountered the following excerpt from the essay "Presence, Memory, and Faith" by Steven E. Webb from *Wilderness and the Heart*, a book about [[thoughts/henry bugbee|Henry Bugbee's]] philosophy.
+But then I encountered the following excerpt from the essay "Presence, Memory, and Faith" by Steven E. Webb from *Wilderness and the Heart*, a book about [[henry bugbee|Henry Bugbee's]] philosophy.
 
 >Fishing stands for the life of faith, and the leaping fish stands for those exclamatory experiences—perceptual, mnemonic, or both—that may supervene upon that life. Apart from our active commitment to what the river may bestow, we would never cast our lines and the fish would never leap. This does not mean that the fish must leap. We can't control their presence, and if we seek for control we shall reduce our lives to continual frustration. Faith, like fishing, has the somewhat oxymoronic character of active waiting—of *keeping* oneself open to whatever may come. Thus wanting a saving experience at the end of one's days not only indicates an unwholesome fixation on something one can't finally possess, but is quite beside the point. The issue is not the availability or durability of such experiences as isolated moments, but rather what they confirm, if and when they do occur, about the "omnirelevant truth"—affirmed and kept in faith—that our world *is* a holy place, that things *are* worthy of love, and that our life together with them *is* affirmable even in our moments of obscurity, and even as we perish.
 
