--- a/content/thoughts/2023-04-06 seeds.md
+++ b/content/thoughts/2023-04-06 seeds.md
@@ -7,7 +7,7 @@ tags:
   - seeds
 ---
 - [[a walk to maahas road]]
-- [[thoughts/being in a place is better than reading about it]]
+- [[being in a place is better than reading about it]]
 
 No place stays the same. Like the rest of the world, a place changes constantly every second. It is always a new place. But that newness will be unnoticed without close attention.
 
