--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -7,5 +7,6 @@ tags:
   - seedlings
 ---
 [[2024-05-08]]: [[never finished never arrived]]; journal as literature of jiyu shukyo
+[[2024-05-09]]: articulation of my commitment to jiyu shukyo; habits and improvements to my routines to reinforce my commitment to jiyu shukyo
 
 [[2024-05-11]]: [[a sunday walk]]
