--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -10,3 +10,4 @@ tags:
 [[2024-05-09]]: articulation of my commitment to jiyu shukyo; habits and improvements to my routines to reinforce my commitment to jiyu shukyo
 
 [[2024-05-11]]: [[a sunday walk]]
+[[2024-05-12]]: thoughts on [[universal truth]] after watching the James Baldwin short documentary; clearer intention for [[jiyu shukyo]]; improvements for inner and outer work
