--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -8,6 +8,6 @@ tags:
 ---
 [[2024-05-08]]: [[never finished never arrived]]; journal as literature of jiyu shukyo
 [[2024-05-09]]: articulation of my commitment to jiyu shukyo; habits and improvements to my routines to reinforce my commitment to jiyu shukyo
-
+[[2024-05-10]]: [[2024-05-23 kiitsu kyokai]]
 [[2024-05-11]]: [[a sunday walk]]
 [[2024-05-12]]: thoughts on [[universal truth]] after watching the James Baldwin short documentary; clearer intention for [[jiyu shukyo]]; improvements for inner and outer work
