--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -12,3 +12,4 @@ tags:
 [[2024-05-11]]: [[a sunday walk]]
 [[2024-05-12]]: thoughts on [[universal truth]] after watching the James Baldwin short documentary; clearer intention for [[jiyu shukyo]]; improvements for inner and outer work
 [[2024-05-13]]: Challenges faced while trying to improve my newsletter; tasks for the day
+[[2024-05-14]]: [[what is free religion imaoka]]
