--- a/content/2022-12-22 seeds.md
+++ b/content/2022-12-22 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[poems/ang mapakinggan mo]]
+- [[ang mapakinggan mo]]
 
 My hunch is that CM's photos make the unclean cleaner by softening texture and lessening noise.
 
