--- a/content/2023-05-10 seeds.md
+++ b/content/2023-05-10 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[poems/a voice behind the bushes]]
+- [[a voice behind the bushes]]
 
 Light touches dust and you arise
 A voice hidden behind the bushes
