--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -14,3 +14,4 @@ tags:
 [[2024-05-13]]: Challenges faced while trying to improve my newsletter; tasks for the day
 [[2024-05-14]]: [[what is free religion imaoka]]; Lea kiitsu kyokai 2 (fear)
 [[2024-05-15]]: jiyu shukyo as my true calling; applying to PRS
+[[2024-05-16]]: [[in praise of syncretism brown]]; [[impurity]]
