--- a/content/2024-05-01 seeds.md
+++ b/content/2024-05-01 seeds.md
@@ -7,6 +7,8 @@ tags:
   - thoughts
   - seeds
 ---
+- [[fishponds]]
+
 Alimangos on the net wall of a fishpond.
 What are the net walls for?
 Are they meant to protect the ponds from plastic and other wastes that may fall down from above?
