--- a/content/2024-05-07 seeds.md
+++ b/content/2024-05-07 seeds.md
@@ -7,7 +7,7 @@ tags:
   - thoughts
   - seeds
 ---
-I'm commiting myself to a free and creative spiritual path in the next years of my life.
+I'm committing myself to a free and creative spiritual path in the next years of my life.
 
 In this path, I promise to get better in the following practices:
 1. Seiza
