--- a/content/thoughts/2023-03 to 2023-10 diary.md
+++ b/content/thoughts/2023-03 to 2023-10 diary.md
@@ -18,7 +18,7 @@ tags:
 [[2023-04-10]]: [[Meditation–Walking–Writing]]; The possibility of working with Maui; Tasks; Returning to my own creative work after establishing more consistent income from Candent and Ili.
 [[2023-04-11]]: [[When I'm living a good day – Clear]]; What I am doing when I am living a good day; Improving my sleep = improving my life; TLW
 [[2023-04-12]]: About potentially being a designer
-[[2023-04-14]]: [[A life in letters]]; [[thoughts/ocean vuong]]; [[On Earth We're Briefly Gorgeous by Vuong]]; [[poems/ang huli]]; Some ideas on [[projects someday/a book about los baños]]
+[[2023-04-14]]: [[A life in letters]]; [[thoughts/ocean vuong]]; [[On Earth We're Briefly Gorgeous by Vuong]]; [[ang huli]]; Some ideas on [[projects someday/a book about los baños]]
 [[2023-04-16]]: [[Articulate your purpose as self-transformation]]
 [[2023-04-18]]: Returning to writing through Yano's workshop; Preparing paperworks for Ili; Simulating [[thoughts/nasa labas ang ili outline]]; Draft of [[poems/parang kailan lang]]
 [[2023-04-19]]: [[thoughts/nasa labas ang ili outline]] script and outline draft
@@ -78,7 +78,7 @@ tags:
 [[2023-06-24]]: A bike ride after a long time
 [[2023-06-25]]: Impressions of the Filipino literary community per ANWW20 experience
 [[2023-06-27]]: I dreamt of Nimre Calde; Walking as world building and worldview building
-[[2023-06-28]]: Ideas on [[thoughts/a history of walking in the philippines]]; Trouble doing meta-work
+[[2023-06-28]]: Ideas on [[a history of walking in the philippines]]; Trouble doing meta-work
 [[2023-06-29]]: Geo-tagged notes and photos project
 [[2023-06-30]]: [[navigating spiritual ambiguity|Navigating Spiritual Ambiguity]]
 
