--- a/content/uman 2022-08.md
+++ b/content/uman 2022-08.md
@@ -86,7 +86,7 @@ Bugbee's only book *The Inward Morning* was described by Gabriel Marcel as a rel
 
 All of these led me to a rabbit hole that I should have explored long ago if I have not been intentionally avoiding the topic: religion. After I left my childhood religion, I found that it was an almost automatic reflex to reject anything that has to do with "religion." Although I did have a [[The Eastern philosophy period of my intellectual life (2015–2017)|"spiritual period"]] a few years after leaving the church when I explored different Eastern belief systems, I never really was able to let go of the cautiousness I learned from my previous experience nor do I want to let go of it. Today, as I try to develop my own worldview, I never really looked at the current project as something "religious." But reading Bugbee and encountering religious naturalism convinced me that I need to understand what religion really is and evaluate my life work through that understanding.
 
-I started my exploration by reading the entry entitled "[The Concept of Religion](https://plato.stanford.edu/entries/concept-religion/index.html#ref-1)" at the Stanford Encyclopedia of Philosophy. I was mindblown by the plethora of options in defining religion, many of which I wasn't aware of. I assumed that the word religion *always* referred to an organized group that shared a belief in a deity or deities and whose practices and traditions involved pleasing those dieties. But the original meaning of the Greek word *religio* was far from this assumption and even more contemporary definitions reject the idea that a religion always requires a belief in a deity. If you are fascinated by this topic, like me, you can check out the notes I wrote about the theme [[thoughts/religion]].
+I started my exploration by reading the entry entitled "[The Concept of Religion](https://plato.stanford.edu/entries/concept-religion/index.html#ref-1)" at the Stanford Encyclopedia of Philosophy. I was mindblown by the plethora of options in defining religion, many of which I wasn't aware of. I assumed that the word religion *always* referred to an organized group that shared a belief in a deity or deities and whose practices and traditions involved pleasing those dieties. But the original meaning of the Greek word *religio* was far from this assumption and even more contemporary definitions reject the idea that a religion always requires a belief in a deity. If you are fascinated by this topic, like me, you can check out the notes I wrote about the theme [[religion]].
 
 After reading and thinking about the many uses of the word religion, I began thinking about the possibility of having a religious element in my life work. As I have articulated in the past, I see my life work as something that revolves around finding answers to the question [[thoughts/how to live]]. My desire to learn phiosophy and develop [[thoughts/my worldview]] and a unique way of life based on that is, I now see, a very religious endeavor. In history, such an endeavor was originally philosophical (that is, it didn't involve deities), but it was later adopted by religious people throughout history that I couldn't keep a blind eye to the lives of these great exemplars. They are rich resources for my project.
 
