--- a/content/uman 2024-05.md
+++ b/content/uman 2024-05.md
@@ -18,6 +18,6 @@ A second experiment I did this month that worked well was scheduling an hour of 
 
 Around the middle of May, I spent an entire morning translating [[shinichiro imaoka|Shin'ichirō Imaoka's]] [[imaoka principles of living|Principles of Living]], both the 1973 and the 1981 versions. While they're still far from final, the translations helped me understand Imaoka's ideas better in the context of my culture. If you speak Filipino, here they are: [[imaoka mga simulain ko sa pamumuhay|Mga Simulain ko sa Pamumuhay ni Imaoka Shin’ichirō]].
 
-The most significant leap of faith I took this month was finally confronting the idea of [[god|God]] after years of avoiding it. As I explained in my essay [[bathala wala intro|"Bathala Wala" (Part One): Confronting "God" on the Mt. Makiling Trail]], I was moved by my conversation with Lea during our first kiitsu kyōkai walk to rethink my metaphysical beliefs, including my non-belief in God. To examine my reasons for disbelieving in a personal God, I started exploring the works of [[john schellenberg|John Schellenberg]], including his book [[divine hiddenness and human reason schellenberg|Divine Hiddenness and Human Reason]], which introduced the [[hiddenness argument]] of [[atheism]]. I also opened myself up to alternative conceptions of God, such as [[baruch spinoza|Bruch Spinoza's]] [[god or nature|"God or Nature," [[wieman minimalist definition of god|Wieman's minimalist definition of God]], [[dewey concept of god|Dewey's concept of God]], and the radical postmodern idea of God as an event by [[john caputo|John D. Caputo]]. In the weeks ahead, I intend to delve deeper into these possibilities, hoping to settle on at least one explanation I am comfortable with.
+The most significant leap of faith I took this month was finally confronting the idea of [[god|God]] after years of avoiding it. As I explained in my essay [[bathala wala intro|"Bathala Wala" (Part One): Confronting "God" on the Mt. Makiling Trail]], I was moved by my conversation with Lea during our first kiitsu kyōkai walk to rethink my metaphysical beliefs, including my non-belief in God. To examine my reasons for disbelieving in a personal God, I started exploring the works of [[john schellenberg|John Schellenberg]], including his book [[divine hiddenness and human reason schellenberg|Divine Hiddenness and Human Reason]], which introduced the [[hiddenness argument]] of [[atheism]]. I also opened myself up to alternative conceptions of God, such as [[baruch spinoza|Bruch Spinoza's]] [[god or nature|"God or Nature"]], [[wieman minimalist definition of god|Henry Wieman's minimalist definition of God]], [[dewey concept of god|Dewey's concept of God]], and the radical postmodern idea of God as an event by [[john caputo|John D. Caputo]]. In the weeks ahead, I intend to delve deeper into these possibilities, hoping to settle on at least one explanation I am comfortable with.
 
 In other news, I wrote another essay, [[never finished never arrived|"Never Finished, Never Arrived"]], about the importance of journaling in a spiritual life. I was also accepted in my second writer's workshop, which I intend to write about in next month's issue.
