--- a/content/uman 2024-02.md
+++ b/content/uman 2024-02.md
@@ -78,7 +78,7 @@ The problem with reading a beautiful piece of writing is that it is often too be
 
 # Walking as Ministry
 
-This leads us to walking's role in writing and the form of ministry that I could incorporate into my current writing life. Walking intentionally favors the messy. When one walks, it is only natural to have flights of thought as feet interact with matter, and matter affects the mind's current state. Unsurprisingly, walking as a writing methodology is often associated with writing techniques like [[thoughts/streams of consciousness|streams of consciousness]].
+This leads us to walking's role in writing and the form of ministry that I could incorporate into my current writing life. Walking intentionally favors the messy. When one walks, it is only natural to have flights of thought as feet interact with matter, and matter affects the mind's current state. Unsurprisingly, walking as a writing methodology is often associated with writing techniques like [[streams of consciousness|streams of consciousness]].
 
 Andrew suggested that I explore the works of [[phil smith|Phil Smith]], a performance-maker and academic who advocates a particular form of "radical walking" based on the twentieth-century [[derive]]. According to Phil Smith, radical walking emerged from anti-capitalist post-war European activists who rejected Stalinism in favor of "a Marcusean liberation of subjectivity, eros, desire, and exploration of irrational zones of consciousness, beyond the reach of mass media." Despite its strong sense of subjectivity, practitioners of the derive aspired to build communities around the walking they did.
 
