--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -16,3 +16,5 @@ tags:
 [[2024-05-15]]: jiyu shukyo as my true calling; applying to PRS
 [[2024-05-16]]: [[in praise of syncretism brown]]; [[impurity]]
 [[2024-05-17]]: surprising resonance on my post about [[a sunday walk]] with Lea
+
+[[2024-06-14]]: Beginning of GBL personal essay entry
