--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -18,3 +18,5 @@ tags:
 [[2024-05-17]]: surprising resonance on my post about [[a sunday walk]] with Lea
 
 [[2024-06-14]]: Beginning of GBL personal essay entry
+[[2024-06-15]]: Outline of following sections of the GBL personal essay entry
+[[2024-06-17]]: Continuation of GBL personal essay entry: How I learned FSL
