--- a/content/2023-05-01 seeds.md
+++ b/content/2023-05-01 seeds.md
@@ -6,6 +6,6 @@ tags:
 - "seeds"
 ---
 
-- [[poems/rambutan road]]
+- [[rambutan road]]
 
 Crossing the Bridge from Ela to Rambutan road, the moon shining high up the early night sky, three-fourths lit a thin film of cloud passes in front of it, a bird sings behind me but everything I wanted to know was why this piece of cement was named after that sweet furry red summer fruit.
