--- a/content/2024-06-01 seeds.md
+++ b/content/2024-06-01 seeds.md
@@ -7,6 +7,8 @@ tags:
   - thoughts
   - seeds
 ---
+- [[a literary workshop is practice of listening and empathy]]
+
 Ang palihan ay praktis ng pakikinig, empathy. Ang teknik lamang ay
 1. Makinig sa mga gawa ng cofellows.
 2. Makinig sa mga kuwento ng cofellows.
